--- a/src/app/_components/search/search.component.html
+++ b/src/app/_components/search/search.component.html
@@ -87,7 +87,7 @@
                 <span>{{ edital.agency }}</span>
               </div>
               <div class="col-2">
-                <span>{{ edital.created | date:'dd/MM/yyyy' }}</span>
+                <span>{{ !edital.submission.includes("-") ? edital.submission : edital.submission | date:'dd/MM/yyyy'}}</span>
               </div>
               <div class="col-1">
                 <span>{{ edital.financingValue }}</span>
