--- a/src/app/_components/search/search.component.html
+++ b/src/app/_components/search/search.component.html
@@ -46,11 +46,11 @@
             <span class="dds__icons dds__chevron-down" [ngClass]="{'arrow-highlight' : agencyOrder == 'DESC'}"></span>
           </div>
         </div>
-        <div class="col-2 filter-field" (click)="orderBycreated()">
+        <div class="col-2 filter-field" (click)="orderBySubmission()">
           <span>Início</span>
           <div class="static-filter">
-            <span class="dds__icons dds__chevron-up"  [ngClass]="{'arrow-highlight' : created == 'ASC'}"></span>
-            <span class="dds__icons dds__chevron-down" [ngClass]="{'arrow-highlight' : created == 'DESC'}"></span>
+            <span class="dds__icons dds__chevron-up"  [ngClass]="{'arrow-highlight' : submission == 'ASC'}"></span>
+            <span class="dds__icons dds__chevron-down" [ngClass]="{'arrow-highlight' : submission == 'DESC'}"></span>
           </div>
         </div>
         <div class="col-1 filter-field value-field" (click)="orderByfinancingValue()">
