--- a/src/app/_pages/users/user-profile/user-profile.component.scss
+++ b/src/app/_pages/users/user-profile/user-profile.component.scss
@@ -199,3 +199,9 @@
 .localization-label {
   font-size: 1.5rem;
 }
+
+.ng-select .ng-select-container {
+  border: 1px solid #9f9f9f !important;
+  height: 40px !important;
+  border-radius: 8px !important;
+}
