--- a/src/app/_components/search/search.component.scss
+++ b/src/app/_components/search/search.component.scss
@@ -10,10 +10,14 @@
     font-size: .9rem !important;
     padding: 6% 16%;
     border: none;
-    margin-right: 30px;
+    padding: 6px 26px;
+    max-width: 9rem;
+    justify-content: center;
     border-radius: 14px;
     background-color: #6396d1;
     align-items: center;
+    padding: 6px 30px;
+    margin-right: 10px;
 }
 .header {    
     .material-symbols-outlined {
@@ -154,6 +158,8 @@
     .col-2 {
         display: flex;
         justify-content: center;
+        text-align: center;
+        padding: 0% 2%;
     }
     .favorite-check {
         padding-left: 3%;
@@ -217,12 +223,13 @@
 .table-scroller {
     overflow-y: auto;
     overflow-x: hidden;
-    height: 36rem;
+    height: 35rem;
 }
 
 .table-backgound {
     background-color: white;
     border-radius: 20px;
+    width: 95rem;
 }
 
 .filter-field {
@@ -258,6 +265,7 @@
     justify-content: flex-start !important;
     padding-left: 1px;
 }
+
 
 @media (max-height: 900px) {
     .table-scroller {
