--- a/src/app/_components/users/user-list/user-list.component.scss
+++ b/src/app/_components/users/user-list/user-list.component.scss
@@ -153,6 +153,7 @@
 .table-backgound {
     background-color: white;
     border-radius: 20px;
+    min-width: 1329px;
 }
 .details {
     color: #2871ff;
