--- a/src/app/_components/search-filter-dropdown/search-filter-dropdown.component.scss
+++ b/src/app/_components/search-filter-dropdown/search-filter-dropdown.component.scss
@@ -53,3 +53,10 @@
     background-color: #fff;
     padding: 1% 3%;
 }
+
+@media (max-height: 900px) {
+    .body {
+        height: 20rem;
+        overflow: auto;
+    }
+}
