--- a/src/app/_components/search/search.component.html
+++ b/src/app/_components/search/search.component.html
@@ -13,7 +13,7 @@
     <form [formGroup]="filterForm" (submit)="filter()"> 
       <div class="header">
         <div class="search-bar">
-          <input type="text" name="" id="" placeholder="Pesquisar" formControlName = "title">
+          <input type="text" name="" id="" placeholder="Pesquisar" formControlName = "agency">
           <button class="dds__icons dds__search"></button>
         </div>
         
@@ -34,90 +34,93 @@
         </div>
       </div>  
     </form>
-    <div class="table-backgound">
-      <div class="row row-header">
-        <div class="col-3 name">
-          <span>Nome</span>
-        </div>
-        <div class="col-1 agency filter-field" (click)="orderByInstitute()">
-          <span>Instituição</span>
-          <div class="static-filter">
-            <span class="dds__icons dds__chevron-up"  [ngClass]="{'arrow-highlight' : agencyOrder == 'ASC'}"></span>
-            <span class="dds__icons dds__chevron-down" [ngClass]="{'arrow-highlight' : agencyOrder == 'DESC'}"></span>
+    <div class="responsive-table">
+      <div class="table-backgound">
+        <div class="row row-header">
+          <div class="col-3 name">
+            <span>Nome</span>
           </div>
-        </div>
-        <div class="col-2 filter-field" (click)="orderBySubmission()">
-          <span>Início</span>
-          <div class="static-filter">
-            <span class="dds__icons dds__chevron-up"  [ngClass]="{'arrow-highlight' : submission == 'ASC'}"></span>
-            <span class="dds__icons dds__chevron-down" [ngClass]="{'arrow-highlight' : submission == 'DESC'}"></span>
-          </div>
-        </div>
-        <div class="col-1 filter-field value-field" (click)="orderByfinancingValue()">
-          <span>Valor</span>
-          <div class="static-filter">
-            <span class="dds__icons dds__chevron-up"  [ngClass]="{'arrow-highlight' : financingValue == 'ASC'}"></span>
-            <span class="dds__icons dds__chevron-down" [ngClass]="{'arrow-highlight' : financingValue == 'DESC'}"></span>
-          </div>
-        </div>
-        <div class="col-1 affinity-field-label">
-          <span>Afinidade</span>
-        </div>
-        <div class="col-2">
-          <span>Área</span>
-        </div>
-        <div class="col-1 favorite-check">
-          <span>Favoritar</span>
-        </div>
-        <div class="col-1">
-        </div>
-      </div>
-      <div>
-        <div class="table-scroller">
-        <div class="table-content2" *ngFor="let edital of editais;  let i = index">
-          <div class="table-content"  (click)="select(i)" [ngClass]="{'dark_row': i % 2 !== 0}">
-            <div class="row" [ngClass]="{'selected': i === selected} ">
-              <div class="col-3 edital-name">
-                <label class="dds__icons dds__server-rack-support"></label>
-                <div>
-                  <span (click)="seeMore(edital.id)" data-toggle="tooltip" data-placement="bottom" [title]="edital.title">{{ reduceTitle(edital.title) }}</span>
-                </div>
-              </div>
-              <div class="col-1 agency">
-                <span>{{ edital.agency }}</span>
-              </div>
-              <div class="col-2">
-                <span>{{ !edital.submission.includes("-") ? edital.submission : edital.submission | date:'dd/MM/yyyy'}}</span>
-              </div>
-              <div class="col-1">
-                <span>{{ edital.financingValue }}</span>
-              </div>
-              <div class="col-1 affinity-field">
-                <span>{{ edital.Afinidade ??  '10' }}</span>
-              </div>
-              <div class="col-2 area-List">
-                <span *ngFor="let item of edital.areaList">{{ reduceArea(item) }}</span>
-              </div>
-              <div class="col-1 favorite-check">
-                <span class="material-symbols-outlined">bookmark</span>
-              </div>
-              <div class="col-1">
-                <button class="toggle-objectives" [id]="'toggle-' + i" (click)="toggleDetails(i)">⌵</button>
-              </div>
-            </div>
-            <div class="row table-objectives" [ngClass]="{'selected': i === selected}" [id]="'details-' + i" hidden>
-              <div class="col-12">
-                <label>Objetivos: </label>
-                <span>{{ edital.objective }}</span>
-                <div>
-                  <a (click)="seeMore(edital.id)">Ver mais</a>
-                </div>
-              </div>
+          <div class="col-1 agency filter-field" (click)="orderByInstitute()">
+            <span>Instituição</span>
+            <div class="static-filter">
+              <span class="dds__icons dds__chevron-up"  [ngClass]="{'arrow-highlight' : agencyOrder == 'ASC'}"></span>
+              <span class="dds__icons dds__chevron-down" [ngClass]="{'arrow-highlight' : agencyOrder == 'DESC'}"></span>
             </div>
           </div>
+          <div class="col-2 filter-field" (click)="orderBySubmission()">
+            <span>Início</span>
+            <div class="static-filter">
+              <span class="dds__icons dds__chevron-up"  [ngClass]="{'arrow-highlight' : submission == 'ASC'}"></span>
+              <span class="dds__icons dds__chevron-down" [ngClass]="{'arrow-highlight' : submission == 'DESC'}"></span>
+            </div>
+          </div>
+          <div class="col-1 filter-field value-field" (click)="orderByfinancingValue()">
+            <span>Valor</span>
+            <div class="static-filter">
+              <span class="dds__icons dds__chevron-up"  [ngClass]="{'arrow-highlight' : financingValue == 'ASC'}"></span>
+              <span class="dds__icons dds__chevron-down" [ngClass]="{'arrow-highlight' : financingValue == 'DESC'}"></span>
+            </div>
+          </div>
+          <div class="col-1 affinity-field-label">
+            <span>Afinidade</span>
+          </div>
+          <div class="col-2">
+            <span>Área</span>
+          </div>
+          <div class="col-1 favorite-check">
+            <span>Favoritar</span>
+          </div>
+          <div class="col-1">
+          </div>
         </div>
+        <div>
+          <div class="table-scroller">
+          <div class="table-content2" *ngFor="let edital of editais;  let i = index">
+            <div class="table-content"  (click)="select(i)" [ngClass]="{'dark_row': i % 2 !== 0}">
+              <div class="row" [ngClass]="{'selected': i === selected} ">
+                <div class="col-3 edital-name">
+                  <label class="dds__icons dds__server-rack-support"></label>
+                  <div>
+                    <span (click)="seeMore(edital.id)" data-toggle="tooltip" data-placement="bottom" [title]="edital.title">{{ reduceTitle(edital.title) }}</span>
+                  </div>
+                </div>
+                <div class="col-1 agency">
+                  <span>{{ edital.agency }}</span>
+                </div>
+                <div class="col-2">
+                  <span>{{ !edital.submission.includes("-") ? edital.submission : edital.submission | date:'dd/MM/yyyy'}}</span>
+                </div>
+                <div class="col-1">
+                  <span>{{ edital.financingValue }}</span>
+                </div>
+                <div class="col-1 affinity-field">
+                  <span>{{ edital.Afinidade ??  '10' }}</span>
+                </div>
+                <div class="col-2 area-List">
+                  <span *ngFor="let item of edital.areaList">{{ reduceArea(item) }}</span>
+                </div>
+                <div class="col-1 favorite-check">
+                  <span class="material-symbols-outlined">bookmark</span>
+                </div>
+                <div class="col-1">
+                  <button class="toggle-objectives" [id]="'toggle-' + i" (click)="toggleDetails(i)">⌵</button>
+                </div>
+              </div>
+              <div class="row table-objectives" [ngClass]="{'selected': i === selected}" [id]="'details-' + i" hidden>
+                <div class="col-12">
+                  <label>Objetivos: </label>
+                  <span>{{ edital.objective }}</span>
+                  <div>
+                    <a (click)="seeMore(edital.id)">Ver mais</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          </div>
         </div>
       </div>
     </div>
+  
   </div> 
 </div>
