--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
                 <div class="user-img">
                   <img src="{{authService.user.profileImageUrl}}">
                 </div>
-                <span class="ms-1 d-none d-sm-inline">Seu perfil</span>
+                <span class="ms-1 menu-item-label">Seu perfil</span>
               </a>
             </li>
             <li class="nav-item disabled" routerLinkActive="">
@@ -18,15 +18,15 @@
                   <span class="icons_google material-symbols-outlined">
                     dashboard
                     </span>
-                  <span class="ms-1 d-none d-sm-inline">Recomendação</span>
+                  <span class="ms-1 menu-item-label">Recomendação</span>
                 </a>
             </li>
-            <li class="nav-item disabled">
+            <li class="nav-item disabled" routerLinkActive="">
               <a [routerLink]="['/']" class="nav-link align-middle px-0">
                 <span class="icons_google material-symbols-outlined">
-                  event_available
-                  </span>
-                <span class="ms-1 d-none d-sm-inline">Calendário</span>
+                  view_timeline
+                </span>
+                <span class="ms-1 menu-item-label">Área de trabalho</span>
               </a>
             </li>
             <li class="nav-item" routerLinkActive="item-selected">
@@ -34,34 +34,48 @@
                 <span class=" icons_google material-symbols-outlined">
                   quick_reference_all
                   </span>
-                <span class="ms-1 d-none d-sm-inline">Pesquisa</span>
+                <span class="ms-1 menu-item-label">Pesquisa</span>
               </a>
             </li>
             <li class="nav-item disabled">
               <a [routerLink]="['/']" class="nav-link align-middle px-0">
                 <span class="icons_google material-symbols-outlined">
-                  settings
-                  </span>
-                <span class="ms-1 d-none d-sm-inline">Configurações</span>
+                  bookmark
+                </span>
+                <span class="ms-1 menu-item-label">Salvos</span>
               </a>
             </li>
             <li class="nav-item disabled">
               <a [routerLink]="['/']" class="nav-link align-middle px-0">
                 <span class="icons_google material-symbols-outlined">
-                  payments
+                  event_available
                   </span>
-                <span class="ms-1 d-none d-sm-inline">Subscrição</span>
+                <span class="ms-1 menu-item-label">Calendário</span>
+              </a>
+            </li>
+            <li class="nav-item disabled" routerLinkActive="">
+              <a [routerLink]="['/']" class="nav-link align-middle px-0">
+                <span class="icons_google material-symbols-outlined">
+                  thumb_down
+                </span>
+                <span class="ms-1 menu-item-label">Descartados</span>
               </a>
             </li>
             <li class="nav-item" routerLinkActive="item-selected">
               <a [routerLink]="['/list-users']" class="nav-link align-middle px-0">
                 <span class="icons_google material-symbols-outlined">
                   group
-                  </span>
-                <span class="ms-1 d-none d-sm-inline">Administrador</span>
+                </span>
+                <span class="ms-1 menu-item-label">Administrador</span>
               </a>
             </li>
           </ul>
+          <li class="nav-item logout" (click)="confirmLogout()">
+            <span class="icons_google material-symbols-outlined ">
+              logout
+            </span>
+            <span class="ms-1 menu-item-label">Logout</span>
+          </li>
         </div>
       </div> 
       <div class="col py-3 card-principal">
