--- a/src/styles.scss
+++ b/src/styles.scss
@@ -226,7 +226,7 @@ body {
 .container {
   padding: 0px 114px 56px 114px !important;
   height: 78%;
-  min-width: 83%;
+  width: 90%;
   position: absolute;
   border-radius: 13px;
   background-color: #fbfaf4;
@@ -255,7 +255,9 @@ body {
   border-radius: 20px;
   padding: 0px;
   box-shadow: 0px 2px 5px #00000029;
-}/* 
+
+}
+/* 
 .ng-dropdown-panel {
   position: relative !important;
 } */
@@ -333,6 +335,10 @@ body {
   }
 }
 
+.responsive-table {
+  overflow: auto;
+}
+
 /* Scroll Bar */
 ::-webkit-scrollbar {
   height: 6px;
@@ -375,4 +381,41 @@ body {
   padding: 0 5px;
   background-color: #dfdfdf !important;
   border-radius: 3px;
+}
+
+
+@media (min-width: 576px) {
+  .container {
+    max-width: 90%;
+  }
+}
+
+@media (min-width: 768px) {
+  .container-md,.container-sm,.container {
+    max-width: 90%;
+  }
+}
+
+@media (min-width: 992px) {
+  .container {
+    max-width: 90%;
+  }
+}
+
+@media (min-width: 1200px) {
+  .container {
+    max-width: 90%;
+  }
+}
+
+@media (min-width: 1400px) {
+  .container {
+    max-width: 83%;
+  }
+  .menu-item-label {
+    display: block !important;
+  }
+  .side-menu-body {
+    width: 12% !important;
+  }
 }
