--- a/src/app/_components/search-filter-dropdown/search-filter-dropdown.component.scss
+++ b/src/app/_components/search-filter-dropdown/search-filter-dropdown.component.scss
@@ -34,6 +34,8 @@
 .area-selection {
     display: flex;
     flex-wrap: wrap;
+    overflow-y: auto;
+    max-height: 90px;
 }
 
 .item-selected {
@@ -60,3 +62,4 @@
         overflow: auto;
     }
 }
+
