--- a/src/app/_components/search/search.component.scss
+++ b/src/app/_components/search/search.component.scss
@@ -265,10 +265,27 @@
     justify-content: flex-start !important;
     padding-left: 1px;
 }
-
-
-@media (max-height: 900px) {
+@media (min-height: 600px) {
     .table-scroller {
-        height: 27rem;
+        height: 19rem;
     }
 }
+
+@media (min-height: 735px) {
+    .table-scroller {
+        height: 25rem;
+    }
+}
+
+@media (min-height: 800px) {
+    .table-scroller {
+        height: 29rem;
+    }
+}
+
+@media (min-height: 900px) {
+    .table-scroller {
+        height: 35rem;
+    }
+}
+
