--- a/src/app/_pages/home/home.component.html
+++ b/src/app/_pages/home/home.component.html
@@ -2,10 +2,10 @@
   <app-confirm-alert></app-confirm-alert>
   <app-breadcrumb [pages]="breadcrumbPages"></app-breadcrumb>
 
-  <div>
+  <!-- <div>
     <app-projects-small-list></app-projects-small-list>
   </div>
   <div style="margin-top: 25px;">
     <app-collaborators-small-list></app-collaborators-small-list>
-  </div>
+  </div> -->
 </div>
